--- a/l10n_es_facturae/views/report_facturae.xml
+++ b/l10n_es_facturae/views/report_facturae.xml
@@ -320,7 +320,7 @@
                             <GrossAmount t-esc="('%.6f' if version == '3_2' else '%.8f') % line.price_subtotal"/>
                             <TaxesWithheld t-if="withheld">
                                 <t t-foreach="line_taxes['taxes']" t-as="line_tax">
-                                    <Tax t-if="line_tax['amount'] &lt; 0">
+                                    <Tax t-if="line_tax['amount'] != 0">
                                         <t t-set="tax" t-value="invoice.env['account.tax'].browse(line_tax['id'])" />
                                         <TaxTypeCode t-esc="tax.facturae_code"/>
                                         <TaxRate t-esc="('%.2f' if version == '3_2' else '%.8f') % (-tax.amount)"/>
@@ -337,7 +337,7 @@
                             </TaxesWithheld>
                             <TaxesOutputs>
                                 <t t-foreach="line_taxes['taxes']" t-as="line_tax">
-                                    <Tax t-if="line_tax['amount'] &gt;= 0">
+                                    <Tax t-if="line_tax['amount'] != 0">
                                         <t t-set="tax" t-value="invoice.env['account.tax'].browse(line_tax['id'])" />
                                         <TaxTypeCode t-esc="tax.facturae_code"/>
                                         <TaxRate t-esc="('%.2f' if version == '3_2' else '%.8f') % (tax.amount)"/>
